syntax="proto3";
package spin;

service Container {
    rpc SpinContainer (ContainerRequest) returns (ContainerResponse);
}

message ContainerRequest {
    string user_id = 1;
    uint32 percent = 2;
}

message ContainerResponse {
    bool successful = 1;
    string hostname = 2;
    string port = 3;
}